# tako

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_shaders.bat  mkdocs.yml
.devcontainer/: Dockerfile  Dockerfile.Arch  Dockerfile.Emscripten  Dockerfile.Fedora  devcontainer.json  install-cmake.sh  install-emscripten.sh  install-ninja.sh  make_web_build.sh
.devcontainer/emscripten/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.github/workflows/: build.yml  ci.yml  docs.yml  prebuild-devcontainer.yml
Examples/JamPhysics2D/: CMakeLists.txt  JamPhysics2D.cpp
Examples/LDtkImport/: CMakeLists.txt  LDtkImport.cpp
Examples/LDtkImport/Assets/: World.ldtk
Examples/Sandbox/: CMakeLists.txt  Sandbox.cpp
Examples/Sandbox/Assets/: image.frag.spv  image.vert.spv  quad.vert.spv
Examples/Sandbox3D/: CMakeLists.txt  Sandbox.cpp
Examples/Sandbox3D/Assets/: CrossGolf.glb
Examples/SandboxVulkan/: CMakeLists.txt  Sandbox.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
Sandbox/Assets/: quad.frag.spv
SandboxVulkan/: CMakeLists.txt  Sandbox.cpp
SandboxVulkan/Assets/: CrossGolf.mtl  shader.frag.spv  shader.vert.spv
Tako/: CMakeLists.txt
Tako/Editor/include/: FileWatcher.hpp
Tako/Runtime/: CMakeLists.txt
Tako/Runtime/src/: EntryPoint.cppm
Tako/Runtime/src/platform/default/: Main.cpp
Tako/Runtime/src/platform/win32/: Main.cppm
Tako/include/: Application.hpp  Archetype.hpp  Assets.hpp  Audio.hpp  Bitmap.hpp  Entity.hpp  EntryPoint.hpp  Event.hpp  FileSystem.hpp  Font.hpp  GameConfig.hpp  GraphicsAPI.hpp  GraphicsContext.hpp  IGraphicsContext.hpp  Input.hpp  JobSystem.hpp  Log.hpp  Material.hpp  Math.hpp  NumberTypes.hpp  Pipeline.hpp  PixelArtDrawer.hpp  PlatformerPhysics2D.hpp  Reflection.hpp  Renderer3D.hpp  Resources.hpp  Serialization.hpp  SmallVec.hpp  Sprite.hpp  Tako.hpp  Texture.hpp  Timer.hpp  Utility.hpp  VertexBuffer.hpp  WinUtility.hpp  Window.hpp  WindowHandle.hpp  World.hpp
Tako/include/Allocators/: Allocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp
Tako/include/Jam/: LDtkImporter.hpp  PlatformerPhysics2D.hpp  TileMap.hpp
Tako/shaders/: image.frag.glsl  image.vert.glsl  quad.frag.glsl  quad.vert.glsl  shader.frag.glsl  shader.vert.glsl  vulkan_image.frag.glsl  vulkan_image.vert.glsl  vulkan_quad.vert.glsl
Tako/src/: Application.cpp  Application.cppm  Assets.cppm  Audio.cpp  Audio.cppm  Bitmap.cpp  Bitmap.cppm  EntryPoint.cpp  EntryPoint.cppm  Event.cpp  Event.cppm  FileSystem.cpp  FileSystem.cppm  Font.cppm  GraphicsContext.cpp  GraphicsContext.cppm  HandleVec.cppm  Hash.cppm  IO.cppm  Input.cpp  Input.cppm  InputEvent.cppm  JobSystem.cppm  Log.cpp  Math.cpp  Math.cppm  NumberTypes.cppm  OpenGLContext.cpp  PixelArtDrawer.cpp  Reflection.cpp  Reflection.cppm  Renderer3D.cpp  Renderer3D.cppm  Resources.cpp  Resources.cppm  Serialization.cpp  Serialization.cppm  SmallVec.cppm  StringView.cppm  VFS.cppm  (+5 more)
Tako/src/Allocators/: Allocator.cppm  CachePoolAllocator.cppm  FreeListAllocator.cppm  LinearAllocator.cppm  PoolAllocator.cppm
Tako/src/CSG/: CMakeLists.txt  CSG.cppm
Tako/src/ECS/: Archetype.cppm  World.cppm
Tako/src/ImGui/: CMakeLists.txt  ImGuiPlugin.cppm
Tako/src/Jam/: LDtkImporter.cppm  PlatformerPhysics2D.cppm  TileMap.cppm
Tako/src/JobSystem/: JobSystem.cppm
Tako/src/RmlUi/: CMakeLists.txt  RmlUi.cppm  RmlUiFile.cppm  RmlUiRenderer.cppm  RmlUiSystem.cppm
Tako/src/platform/default/: FileSystem.cpp  FileSystem.cppm  IO.cpp  Log.cpp  Main.cpp  Timer.cpp
Tako/src/platform/glfw/: Timer.cpp  Window.cpp  glad.c
Tako/src/platform/opengl/: OpenGL.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLPixelArtDrawer.cpp  OpenGLPixelArtDrawer.hpp  OpenGLSprite.cpp  OpenGLSprite.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
Tako/src/platform/opengl/glad/: glad.h
Tako/src/platform/vulkan/: VulkanContext.cpp  VulkanContext.hpp
Tako/src/platform/web/: FileSystem.cpp  FileSystem.cppm  Log.cpp  Timer.cpp  Window.cpp  index.html
Tako/src/platform/webgpu/: CMakeLists.txt  WebGPUContext.cppm
Tako/src/platform/win32/: FileSystem.cpp  FileSystem.cppm  Log.cpp  Main.cpp  WinUtility.cpp  Window.cpp
Tako/test/: ECSBench.cpp  ECSBench.cppm
Utils/: CMakeLists.txt  Files.hpp  string_literal.cpp
cmake/: tako.cmake
docs/: concepts.md  index.md
docs/systems/: ecs.md  jobsystem.md  reflection.md
include/: Bitmap.hpp  FileSystem.hpp  GraphicsContext.hpp  Log.hpp  Math.hpp  Utility.hpp  WinUtility.hpp  Window.hpp
src/: Bitmap.cpp  FileSystem.cpp  Log.cpp  VulkanContext.cpp  WinUtility.cpp  Window.cpp  main.cpp
